# executorch

./: CMakeLists.txt
backends/openvino/: CMakeLists.txt  build.bat  requirements.txt
backends/openvino/runtime/: OpenvinoBackend.cpp  OpenvinoBackend.hpp
backends/openvino/tests/: test_runner.py
backends/openvino/tests/quantizer/: test_openvino_quantizer.py  test_pt2e_quantization.py  test_representation.py  test_xnnpack_quantizer.py
backends/xnnpack/test/quantizer/: test_pt2e_quantization.py
docs/source/: build-run-openvino.md
examples/openvino/: CMakeLists.txt  example_build.bat
examples/openvino/executor_runner/: openvino_executor_runner.cpp
runtime/core/: memory_allocator.h
